[package]
name = "web_migration"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = "0.11"
futures = "0.3"
tokio = { version = "1.12.0", features = ["full"] }
error-chain = "0.12.4"
chrono = "0.4"
bytes = "1.2.1"
image = "0.24.6"
